--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
 <script src="./node_modules/leaflet/dist/leaflet.js"></script>
 <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
-<script src="./node_modules/leaflet-pixi-overlay/L.PixiOverlay.min.js"></script>
+<script src="./node_modules/leaflet-pixi-overlay/L.PixiOverlay.js"></script>
+<script src="./js/MarkerContainer.js"></script>
 
+<script src="./js/draw-marker.js"></script>
+<script src="./js/many-markers.js"></script>
 <script src="./js/index.js"></script>
 
 </html>
